web/src/style/Header.css
@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;800&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-size: 1em;
}

html, body {
    height: 100%;
}

html {
    font-size: 62.5%;
}

body {
    font-family: "Nunito Sans";
    background-color: #FFF7EB;
    font-size: 16px;
}

a {
    color: #8C8C8C;
    text-decoration: none;
}

img {
    max-width: 100%;
    display: block;
}

.container {
    width: 1200px;
    margin: 0 auto;
    background-color: #ffffff;
    height: 100%;
    min-height: 100%;
    display: flex;
    flex-direction: column;
}

div#root {
    height: 100%;
}

div.Header {
    height: 60px;
    width: 100%;
    padding: 0 20px;
    background-color: #F3A815;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

div.Header > div {
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

div.Header-Right a {
    margin-right: 20px;
}

div.Header-Right input[type=button] {
    height: 38px;
    background: #FFFFFF;
    border: 1px solid #F3A815;
    box-sizing: border-box;
    border-radius: 20px;
    padding: 9px 16px;
    color: #F3A815;
    font-weight: bold;
    font-size: 15px;
    cursor: pointer;
}

div.Header input[type=text] {
    background: #FFFFFF;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 20px;
    height: 38px;
    border: 0;
    padding-left: 36px;
    font-size: 15px;
    line-height: 24px;
    color: #999999;
    width: 392px;
}

div.Header a, div.Header a:hover, div.Header a:visited, div.Header a:link, div.Header a:active {
    text-decoration: none;
    font-family: Nunito Sans;
    font-style: normal;
    font-weight: bold;
    font-size: 15px;
    line-height: 20px;
    color: #ffffff;
}

h1 {
    font-size:24px;
    font-family: Nunito Sans;
    font-weight: bold;
    text-decoration: none;
    margin-right: 22px;
}

h2 {
    font-family: 'Nunito Sans';
    font-style: normal;
    font-weight: bold;
    font-size: 28px;
    line-height: 38px;
    color: #000000;
}

h3 {
    font-family: Nunito Sans;
    font-style: normal;
    font-weight: bold;
    font-size: 20px;
    line-height: 27px;
    color: #000000;
}

div.Footer {
    border-top: 1px solid #F0F0F0;
    background-color: #ffffff;
    height: 44px;
    padding: 0 20px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    font-family: Nunito Sans;
    font-style: normal;
    font-weight: normal;
    font-size: 14px;
    line-height: 19px;
    width: 1200px;
}

div.Footer a {
    text-decoration: none;
    color: #000000;
}

div.Footer img { margin-right: 7px; }

div.subBody {
    min-height: 90vh;
    padding: 0px 30px;
}

.form-540 {
    width: 540px;
    margin: 0 auto;
    margin-top: 36px;
    display: flex;
    flex-direction: column;
}

.form-540 form {
    display: flex;
    flex-direction: column;
}

.form-540 h2 {
    margin-bottom: 8px;
}

.form-540 label {
    margin-bottom: 16px;
}

.form-540 input[type=text],
.form-540 input[type=password] {
    width: 100%;
    background: #FFFFFF;
    border: 1px solid #E5E5E5;
    box-sizing: border-box;
    border-radius: 4px;
    height: 38px;
    padding: 7px 12px;
}

.orange-button {
    background: #F3A815;
    border: 1px solid #F3A815;
    box-sizing: border-box;
    border-radius: 20px;

    font-style: normal;
    font-weight: bold;
    font-size: 15px;
    line-height: 21px;

    text-align: center;

    color: #FFFFFF;
    padding: 0 10px;
    height: 38px;
    min-width: 135px;
    margin-right: 18px;
    cursor: pointer;
}

.ErrorBox {
    background: #F2DEDE;
    border: 1px solid #EBCCCC;
    border-radius: 4px;
    height: 44px;
    margin: 20px 0;
    padding: 10px 13px;
    color: #D23330;
}

.CreateDataset {
    margin-top: 36px;
    margin-bottom: 60px;
}

.CreateDataset h2 {
    margin-bottom: 8px;
}

.CreateDataset form {
    display: flex;
    flex-direction: column;
    padding-bottom: 40px;
}

div.CreateDataset label {
    margin-bottom: 16px;
}

div.CreateDataset input[type=text] {
    width: 40%;
    background: #FFFFFF;
    border: 1px solid #E5E5E5;
    box-sizing: border-box;
    border-radius: 4px;
    height: 38px;
    padding: 7px 12px;
    margin-right: 60px;
}

div.CreateDataset textarea {
    width: 40%;
    background: #FFFFFF;
    border: 1px solid #E5E5E5;
    box-sizing: border-box;
    border-radius: 4px;
    padding: 7px 12px;
    margin-right: 60px;
    font-family: Nunito Sans;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 24px;
    height: 131px;
}

div.CreateDataset input[type=file] {
    width: 40%;
    margin-right: 60px;
}

div.CreateDataset span {
    width: 50%;
    font-family: Nunito Sans;
    font-style: normal;
    font-size: 14px;
    line-height: 19px;
    color: #8C8C8C;
}

div.CreateDataset div {
    margin-top: 10px;
    display: flex;
}

div.form-divider {
    height: 1px;
    border-top: 1px solid #E5E5E5;
    margin: 30px 0;
}

.tabbed-links {
    display: flex;
    width: 100%;
    border-bottom: 1px solid #F0F0F0;
    padding: 0 30px;
}

.tabbed-links li {
    list-style: none;
    padding: 12px 30px 12px 0;
}

.tabbed-links a {
    font-family: Nunito Sans;
    font-style: normal;
    font-weight: bold;
    font-size: 16px;
    line-height: 21px;
}

.tabbed-links li.active a {
    color: #F3A815;
}

.datasets-rows {
    margin-bottom: 50px;
    flex-grow: 1;
}

.datasets-row {
    display: flex;
    margin: 10px 20px 10px 30px;
    flex: 1;
}

.datasets-row div {
    flex: 1;
}

.datasets-image {
    width: 190px;
    height: 130px;

    background-color: #EAEAEA;
    border-radius: 18px;
}

div.datasets-details {
    flex: 0 0 120px;
}

